# over-engineered-claude-usage-monitor

./: .gitignore  LICENSE  Makefile  README.md  README_firmware.md  background.js  content.js  injected.js  iot-push.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  setup.sh
.github/workflows/: ci.yml  release.yml
claude_monitor/: claude_monitor.ino  claude_monitor_common.h
claude_monitor_atoms3r/: README.md  platformio.ini
claude_monitor_atoms3r/src/: main.cpp
claude_usage_daemon/: Cargo.toml  README.md
claude_usage_daemon/resources/: claude-usage-daemon.service  com.claude.usage-daemon.plist
claude_usage_daemon/src/: credentials.rs  main.rs  push.rs  usage.rs
docs/: HOW_USAGE_DATA_WORKS.md  SECURITY.md
shared/: claude_monitor_common.h
