[package]
name = "claude-usage-daemon"
version = "0.1.0"
edition = "2021"
description = "Lightweight daemon that reads Claude OAuth credentials and pushes usage data to IoT display devices"

[[bin]]
name = "claude-usage-daemon"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
fs2 = "0.4"
hex = "0.4"
hmac = "0.12"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "time", "signal", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
